# RosettaX

./: .coveragerc  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  README.rst  data.json  endpoint.json  makefile  meta.yaml  pyproject.toml  pytest.ini  rosettax.spec  version_switcher.json
RosettaX/: __init__.py  __main__.py  _reader.py  _version.py  backend.py  calibration.py  clusterings.py  directories.py  main.py  parser.py  plottings.py  reader.py  root.py  utils.py
RosettaX.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_00373912c94da1eb_ids_py.html  z_00373912c94da1eb_main_py.html  z_00373912c94da1eb_services_py.html  z_00d2c028534c8c01_models_py.html  z_00d2c028534c8c01_services_py.html  z_0153f57c2d9e3b96_detector_dropdowns_py.html  z_0153f57c2d9e3b96_graph_py.html  z_0153f57c2d9e3b96_main_py.html  z_0153f57c2d9e3b96_mutation_py.html  z_0153f57c2d9e3b96_shared_py.html  z_0153f57c2d9e3b96_visibility_py.html  z_07a5064371b02f1c_main_py.html  z_088b2777989a9a39_services_py.html  z_0b641d34d5373573_services_py.html  z_0c2e7254534d37d3_adapters_py.html  z_0c2e7254534d37d3_callbacks_py.html  z_0c2e7254534d37d3_ids_py.html  z_0c2e7254534d37d3_layout_py.html  z_0c2e7254534d37d3_models_py.html  z_0c2e7254534d37d3_services_py.html  z_145a77a0c8cbd817_main_py.html  z_1a75c8ff99cca365_services_py.html  z_20a2de769698444b_fluorescence_py.html  z_20a2de769698444b_io_py.html  z_20a2de769698444b_report_helpers_py.html  z_20a2de769698444b_report_py.html  z_20a2de769698444b_scattering_py.html  z_20a2de769698444b_services_py.html  z_2183a7f7f2f4bebc_s01_header_py.html  z_2183a7f7f2f4bebc_s02_calibration_picker_py.html  (+233 more)
(+1525 files in other folders)
